[tool.poetry]
name = "dartsbot"
version = "0.1.0"
description = ""
authors = ["Markus Kaihola <markus.kaihola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
